<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.Activity1">

    <TextView
        android:id="@+id/textViewActivity1Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_1_name_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonGoTo4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_4_text"
        app:layout_constraintBottom_toTopOf="@+id/textViewActivity1Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonGoTo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_2_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewActivity1Name" />

</androidx.constraintlayout.widget.ConstraintLayout>