<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".screens.screen6.Activity6">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        >
        <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->

        <androidx.appcompat.widget.Toolbar
            android:id= "@+id/toolbar"
            android:layout_width= "match_parent"
            android:layout_height= "?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title= "Услуги"
            app:layout_collapseMode= "pin" />

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary">



            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax"/>


        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width= "match_parent"
        android:layout_height= "match_parent"
        android:clipToPadding="false"
        app:layout_behavior= "@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".screens.screen6.Activity6">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="15dp"
                android:paddingBottom="17dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="normal"
                    android:textColor="@color/colorCharcoalGrey"
                    android:text="@string/service_text"/>

                <TextView
                    android:id="@+id/textViewAllServices"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="end"
                    android:textAllCaps="true"
                    android:textColor="@color/colorTealish"
                    android:textSize="12sp"
                    android:background="?attr/selectableItemBackground"
                    android:textStyle="normal"
                    android:text="@string/all_text" />

            </LinearLayout>

            <TextView
                android:id="@+id/textViewOfferServices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="sans-serif-medium"
                android:textStyle="normal"
                android:textColor="@color/colorCharcoalGrey"
                android:lineSpacingExtra="1sp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:drawableStart="@drawable/ic_partnership"
                android:drawablePadding="14dp"
                android:paddingTop="15dp"
                android:paddingStart="14dp"
                android:paddingEnd="14dp"
                android:paddingBottom="16dp"
                android:layout_marginBottom="8dp"
                android:background="?attr/selectableItemBackground"
                android:text="@string/offer_a_service_text"
                />

            <androidx.recyclerview.widget.RecyclerView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/recyclerViewServicesList"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:clipToPadding="false"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

            </androidx.recyclerview.widget.RecyclerView>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="155dp"
                android:background="@color/colorPaleGrey"
                >

            </androidx.viewpager.widget.ViewPager>


        </LinearLayout>



    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>